# Wuta-Wuta

./: .env.example  .eslintrc.js  .gitignore  ACCESSIBILITY_GUIDELINES.md  AI_PROXY_SETUP.md  CLOSES_GLASSMORPHISM_PR.md  CLOSES_PR_DESCRIPTION.md  CONTRIBUTING.md  DARK_MODE_ERROR_BOUNDARIES.md  FINAL_TEST_STATUS.md  FRAMER_MOTION_PR_DESCRIPTION.md  GLASSMORPHISM_PR.md  LICENSE  MINTING_DASHBOARD_README.md  PROMPT_HISTORY_PR.md  README.md  TEST_FIX_SUMMARY.md  TODO.md  VISION_AI_IMPLEMENTATION.md  hardhat.config.js  jest.config.js  package-lock.json  package.json  tailwind.config.js  test-implementation.sh  test-vision-ai.js
.github/: dependabot.yml
.github/workflows/: security.yml  soroban-ci-cd.yml  test.yml
.storybook/: main.js  preview.js
backend/: debug-app.js  package-lock.json  package.json  test-output.txt  tsconfig.json
backend/src/: app.ts  server.ts
contracts/: MockERC721.sol  MuseNFT.sol  ProjectManager.sol  WutaAuction.sol
prisma/: schema.prisma
public/: index.html
scripts/: uploadToIPFS.js
server/: activityBroadcaster.js  index.js  index.js.new  prisma.js  stellarListener.js
server/utils/: imageProcessor.js  museUploadAuth.js  (+1 more)
src/: App.js  index.css  index.js  setupProxy.js  setupTests.js
stellar-contracts/: .gas-thresholds.json  README.md  README.md-new  package.json
stellar-contracts/contracts/: ArtAssetToken.rs  Cargo.toml  NFTMarketplace.rs  bridge_interface.rs  test_auction_escrow.rs  test_wutawuta.rs  wutawuta_marketplace.rs
test/: MuseNFT.test.js  WutaAuction.test.js  api.test.js  stellarSignature.test.js
(+107 files in other folders)
