[package]
name = "wutawuta-marketplace"
version = "1.0.0"
edition = "2021"
description = "Comprehensive Soroban smart contract for Wuta-Wuta AI-generated art trading platform"
authors = ["Muse Organization"]
license = "MIT"
repository = "https://github.com/olaleyeolajide81-sketch/Wuta-Wuta"

[lib]
path = "wutawuta_marketplace.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
default = ["export"]
export = []

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
